check for question1

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ jacocoTestReport {
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: [
+                    '**/AppRunner.class'
             ])
         }))
     }
@@ -47,6 +48,7 @@ jacocoTestCoverageVerification {
         rule {
             element = 'CLASS'
             excludes = [
+                 '**.AppRunner'
             ]
 
             limit {
